# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/: main.py
tests/unit/: test_main.py
