[project]
name = "python-project-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.mypy]
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
